# rpi_metar_au

./: README.md  pyproject.toml  requirements.txt  setup.py
rpi_metar/: sources.py  wx.py
rpi_metar/scripts/: strandtest.py
